<resources>
    <string name="app_name">XYZ Clothes Store</string>
    <string name="main_title">Customize Your Clothes</string>
    <string name="type">Type</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="view">View</string>
    <string name="load_customization">Load Customization</string>
    <string name="clothes_preview">Clothes Preview</string>
    <string name="save_customization">Save Customization</string>
    <string name="none">Image</string>

    <string-array name="typeArray">
        <item>Pick a type</item>
        <item>Shirt</item>
        <item>Pants</item>
        <item>Hat</item>
    </string-array>

    <string-array name="colorArray">
        <item>Pick a color</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>

    <string-array name="sizeArray">
        <item>Pick a size</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>
</resources>